--- a/signalr/index.html
+++ b/signalr/index.html
@@ -14,6 +14,11 @@
         font-weight: normal;
       }
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+
+      .remark-slide-content {
+        font-size:30px;
+      }
+
     </style>
   </head>
   <body onload="var slideshow = remark.create({ sourceUrl: 'index.md'});">
