--- a/signalr/index.html
+++ b/signalr/index.html
@@ -3,11 +3,12 @@
   <head>
     <title>My Awesome Presentation</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
     <style type="text/css">
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
       @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
       @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
-
+      
       body { font-family: 'Droid Serif'; }
       h1, h2, h3 {
         font-family: 'Yanone Kaffeesatz';
@@ -18,6 +19,16 @@
       .remark-slide-content {
         font-size:30px;
       }
+
+     .smaller-font { font-size:20px } 
+
+     .pure-table {
+        display: grid;
+     }
+
+     img[src$="svg"] {
+       width: 75%;
+     }
 
     </style>
   </head>
