--- a/react-hooks-and-redux/index.html
+++ b/react-hooks-and-redux/index.html
@@ -26,19 +26,20 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h1>
+          <h1>React</h1>
+					<h2>
 						Hooks + Redux
-					</h1>
+					</h2>
 					<p>staffordwilliams.com</p>
 					<p>@staff0rd</p>
 				</section>
 				<section>
 					<ul>
 						<li>
-							How did we get here?
+							How did I get here?
 						</li>
 						<li>
-							Learning hooks
+							Learning Hooks
 						</li>
 						<li>
 							Learning Redux
@@ -46,7 +47,7 @@
 					</ul>
 				</section>
 				<section>
-					<h2>How did we get here?</h2>
+					<h2>How did I get here?</h2>
 					<img class='fragment' src='img/netscape.gif' />
 				</section>
 				<section>
@@ -127,9 +128,9 @@
             function App() {
               return (
                 &lt;div&gt;
-                &lt;Welcome name=&quot;Sara&quot; /&gt;
-                &lt;Welcome name=&quot;Cahal&quot; /&gt;
-                &lt;Welcome name=&quot;Edite&quot; /&gt;
+                  &lt;Welcome name=&quot;Sara&quot; /&gt;
+                  &lt;Welcome name=&quot;Cahal&quot; /&gt;
+                  &lt;Welcome name=&quot;Edite&quot; /&gt;
                 &lt;/div&gt;
               );
             }
