--- a/react-hooks-and-redux/index.html
+++ b/react-hooks-and-redux/index.html
@@ -488,7 +488,7 @@
             <h1>redux hooks</h1>
             <ul>
               <li>useSelector</li>
-              <li>useAction</li>
+              <li>useDispatch</li>
             </ul>
           </section>
           <section>
