--- a/react-hooks-and-redux/index.html
+++ b/react-hooks-and-redux/index.html
@@ -28,7 +28,7 @@
 				<section>
           <h1>React</h1>
 					<h2>
-						Hooks + Redux
+						Learning Hooks + Redux
 					</h2>
 					<p>staffordwilliams.com</p>
 					<p>@staff0rd</p>
