--- a/src/react-hooks-and-redux/index.html
+++ b/src/react-hooks-and-redux/index.html
@@ -89,19 +89,19 @@
 				<section>
 					<img style='background: white;' src='img/pixijs.png' />
 				</section>
-				<section>
+				<!-- <section>
 					<h2>2016</h2>
 					<img src='img/angular2.jpg' />
-				</section>
-				<section>
+				</section> -->
+				<!-- <section>
 					<h2>2017</h2>
 					<ul>
 						<li class='fragment' >Swift (?)</li class='fragment'>
 						<li class='fragment' >ASP.NET MVC 4</li class='fragment'>
 					</ul>
-				</section>
+				</section> -->
 				<section>
-					<h2>2018</h2>
+					<h2>2017</h2>
 					<img style='background: white;' src='img/react.jpeg' />
 				</section>
 				<section>
