--- a/src/react-hooks-and-redux/index.html
+++ b/src/react-hooks-and-redux/index.html
@@ -585,7 +585,37 @@
               <li class="fragment">createAction</li>
               <li class="fragment">createSelector</li>
               <li class="fragment">createSlice</li>
+              <li class="fragment">createAsyncThunk</li>
+              <li class="fragment">createEntityAdapter</li>
             </ul>
+            <aside class="notes">
+              <ul>
+                <li>createSlice
+                  <ul>
+                    <li>
+                      Generates action creators and action types
+                    </li>
+                  </ul>
+                </li>
+                <li>createAsyncThunk
+                  <ul>
+                    <li>
+                      Cuts down on boiler plate for async actions
+                    </li>
+                  </ul>
+                </li>
+                <li>createEntityAdapter
+                  <ul>
+                    <li>
+                      Port of ngrx/entity
+                    </li>
+                    <li>
+                      Generates a set of prebuilt reducers and selectors for performing CRUD operations
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </aside>
           </section>
           <section>
             <h1>redux hooks</h1>
