--- a/src/react-hooks-and-redux/index.html
+++ b/src/react-hooks-and-redux/index.html
@@ -4,7 +4,16 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>React: Learning Hooks + Redux</title>
+    <!-- Twitter cards -->
+    <meta name="twitter:site" content="@staff0rd">
+    <meta name="twitter:creator" content="@staff0rd">
+    <meta name="og:title" content="React: Learning Hooks + Redux">
+    <!-- page summary -->
+    <meta name="og:description" content="Reducing complexity in React with Hooks. Adding it back by integrating Redux">
+    <!-- page image -->
+    <meta name="twitter:card"  content="summary_large_image">
+    <meta name="og:image" content="cover.jpg">
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
