--- a/src/react-hooks-and-redux/index.html
+++ b/src/react-hooks-and-redux/index.html
@@ -13,7 +13,7 @@
     <meta name="og:description" content="Reducing complexity in React with Hooks. Adding it back by integrating Redux">
     <!-- page image -->
     <meta name="twitter:card"  content="summary_large_image">
-    <meta name="og:image" content="cover.jpg">
+    <meta name="og:image" content="https://staffordwilliams.com/talks/slides/react-hooks-and-redux/cover.jpg">
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
